fix: TextView shouldn't overflow

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -116,6 +116,7 @@ body {
 
 .TextView {
 	overflow-wrap: break-word;
+	overflow: hidden;
 }
 
 
